Исправляет ошибки в декоре

--- a/index.html
+++ b/index.html
@@ -116,20 +116,7 @@
                   Корзина</a
                 >
                 <div class="popover popover-cart">
-                  <span class="triangle-cart">
-                    <svg
-                      class="triangle-icon-cart"
-                      aria-hidden="true"
-                      focusable="false"
-                      width="14"
-                      height="6"
-                      viewBox="0 0 14 6"
-                      fill="currentColor"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path d="M14 6H0l7-6 7 6Z" fill="#000" />
-                    </svg>
-                  </span>
+                  <span class="triangle-cart"></span>
                   <div class="popopver-content">
                     <ul class="cart-item-list">
                       <li class="cart-item">
@@ -137,7 +124,7 @@
                           <span class="сart-item-icon-first">
                             <img
                               class="cart-item-image"
-                              src="../images/selfie-amat.png"
+                              src="images/selfie-amat.png"
                               width="39"
                               height="43"
                               alt="Изображение профессиональной селфи-палки."
@@ -281,7 +268,7 @@
               <h2 class="visually-hidden">Изображение квадрокоптера.</h2>
               <img
                 class="slider-image"
-                src="../images/slider-copter.png"
+                src="images/slider-copter.png"
                 width="560"
                 height="560"
                 alt="Квадрокоптер"
@@ -1092,7 +1079,7 @@
           </button>
         </section>
         <section class="modal-content">
-          <h2 class="visually hidden">Модальное окно доставки</h2>
+          <h2 class="visually-hidden">Модальное окно доставки</h2>
           <form
             class="submit-form"
             action="https://echo.htmlacademy.ru/"
@@ -1180,6 +1167,7 @@
                       min="1"
                       max="100"
                       step="1"
+                      value="1"
                     />
                     <button class="add-product">
                       <svg
