--- a/catalog.html
+++ b/catalog.html
@@ -117,20 +117,7 @@
                   Корзина</a
                 >
                 <div class="popover popover-cart">
-                  <span class="triangle-cart">
-                    <svg
-                      class="triangle-icon-cart"
-                      aria-hidden="true"
-                      focusable="false"
-                      width="14"
-                      height="6"
-                      viewBox="0 0 14 6"
-                      fill="currentColor"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path d="M14 6H0l7-6 7 6Z" fill="#000" />
-                    </svg>
-                  </span>
+                  <span class="triangle-cart"></span>
                   <div class="popopver-content">
                     <ul class="cart-item-list">
                       <li class="cart-item">
