--- a/index.html
+++ b/index.html
@@ -931,7 +931,7 @@
       <div class="footer-wrapper container">
         <section class="footer-menu">
           <h3 class="visually-hidden">Услуги и контакты</h3>
-          <a href="index.html">
+          <a class="footer-logo" href="index.html">
             <img
               class="footer-logo"
               src="images/logo-footer.svg"
@@ -1121,8 +1121,8 @@
                   placeholder="В свободной форме"
                 />
               </div>
-              <div class="quantity-wrapper">
-                <div>
+              <div class="quantity-container">
+                <div class="quantity-wrapper">
                   <label for="product-qty">Количество:</label>
                   <div class="popover-modal">
                     <span class="triangle">
@@ -1145,7 +1145,7 @@
                     </p>
                   </div>
                   <div class="buttons-wrapper">
-                    <button class="remove-product">
+                    <button class="remove-product" type="button">
                       <svg
                         class="remove-icon"
                         aria-hidden="true"
@@ -1169,7 +1169,7 @@
                       step="1"
                       value="1"
                     />
-                    <button class="add-product">
+                    <button class="add-product" type="button">
                       <svg
                         class="add-icon"
                         aria-hidden="true"
