--- a/8/index.html
+++ b/8/index.html
@@ -907,7 +907,7 @@
               спецпредложения и вот это вот всё.
             </p>
           </div>
-          <div class="subscribe-wrapper">
+          <div class="subscribe-wrapper container">
             <form
               class="newsletter-form"
               action="https://echo.htmlacademy.ru/"
@@ -1157,7 +1157,7 @@
                         fill="none"
                         xmlns="http://www.w3.org/2000/svg"
                       >
-                        <path d="M16 0H0v2h16V0Z" fill="#000" />
+                        <path d="M16 0H0v2h16V0Z" fill="currentColor" />
                       </svg>
                     </button>
                     <input
